add % in keyframe name (like 0% or 100%)

--- a/test/index.html
+++ b/test/index.html
@@ -50,10 +50,10 @@
 	}
 
 	@-skrollr-keyframes test3 {
-		0 {
+		0% {
 			left:0px;
 		}
-		100 {
+		100% {
 			left:100px;
 		}
 	}
@@ -63,13 +63,13 @@
 	}
 
 	@-skrollr-keyframes precedence2 {
-		0 {
+		0% {
 			top:0px;
 		}
 
 		/*100 should be interhited from style.css*/
 
-		200 {
+		200% {
 			top:200px;
 		}
 	}
@@ -79,7 +79,7 @@
 	}
 
 	@-skrollr-keyframes inline		{
-		0{top:1337px;}
+		0%{top:1337px;}
 	}
 	</style>
 </head>
