--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
 
 	<style>
 	#simple1 {
-		-skrollr-animation-name: test1;
+		animation-name: test1;
 	}
 
 	#simple2 {
@@ -25,7 +25,7 @@
 		-skrollr-animation-name: test3;
 	}
 
-	@-skrollr-keyframes test1 {
+	@keyframes test1 {
 		bottom-top {
 			left:100%;
 			top:0%;
