--- a/test/index.html
+++ b/test/index.html
@@ -25,7 +25,7 @@
 		-skrollr-animation-name: test3;
 	}
 
-	@keyframes test1 {
+	@-skrollr-keyframes test1 {
 		bottom-top {
 			left:100%;
 			top:0%;
@@ -37,7 +37,7 @@
 		}
 	}
 
-	@-skrollr-keyframes test2 {
+	@-webkit-keyframes test2 {
 		top {
 			margin:0px;
 			color:rgb(0,0,0);
@@ -49,7 +49,7 @@
 		}
 	}
 
-	@-skrollr-keyframes test3 {
+	@keyframes test3 {
 		0% {
 			left:0px;
 		}
