--- a/test/index.html
+++ b/test/index.html
@@ -103,7 +103,7 @@
 
 	<script src="qunit.js" type="text/javascript"></script>
 	<script src="jquery.js" type="text/javascript"></script>
-	<script src="../src/skrollr.stylesheets.js" type="text/javascript"></script>
+	<script src="../src/scrollover.js" type="text/javascript"></script>
 	<script src="tests.js" type="text/javascript"></script>
 </body>
 </html>
