--- a/demo/demo.html
+++ b/demo/demo.html
@@ -18,7 +18,7 @@
             -skrollr-anchor-target: ".slide";
         }
     </style>
-    <link rel="stylesheet" Xdata-skrollr-stylesheet href="../bower_components/animate.css/source/flippers/flip.css"/>
+    <link rel="stylesheet" Xdata-skrollr-stylesheet href="../node_modules/animate.css/source/flippers/flip.css"/>
     <script src="../src/scrollover.js"></script>
     <script src="../node_modules/skrollr/src/skrollr.js"></script>
     <script>skrollr.init()</script>
